# ml-prediction-api-Customer-Churn

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  schemas.py
models/: full_pipeline.pkl
notebooks/: exploration.ipynb
src/: check_data.py  data_preprocessing.py  train.py
tests/: test_api.py
